# tennis-stroke-analyzer

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
src/tennis_analyzer/: config.py  main.py  overlay.py  pose_tracker.py  stroke_classifier.py  video_processor.py
tests/: test_pose_tracker.py  test_stroke_classifier.py  test_video_processor.py
